<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_thifal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/foto_pas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namaku"
        app:layout_constraintTop_toBottomOf="@+id/foto_thifal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:id="@+id/namaku"
        android:textSize="20sp"/>

    <TableLayout
        android:id="@+id/profilku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/namaku"
        app:layout_constraintLeft_toLeftOf="@id/namaku"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp">
        <TableRow
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/job"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16sp"/>
            <TextView
                android:text="@string/jobku"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"
                android:layout_marginEnd="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailku"
                android:textSize="14sp"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
    <Button
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:layout_weight="1"
        android:id="@+id/btnmail"
        android:text="@string/kirim_saran"
        app:layout_constraintTop_toBottomOf="@id/profilku"
        app:layout_constraintRight_toRightOf="@id/profilku"
        android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>